Переписать тесты под новую реалицаю и дополнить новыми